test/scc/expr/semantic-errors/114.a
114.t:5:7: error: assignment discards 'const' qualifier